--- a/src/components/index.css
+++ b/src/components/index.css
@@ -1,5 +1,10 @@
 body {
-
+  background: url('./MainP.jpg') no-repeat center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  color: white;
   padding: 0;
   font-family: sans-serif;
 }
