fixed styling for Cities/Post.js

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -21,7 +21,20 @@ body {
 
 }
 
+.container{
+  margin: auto;
+  margin-top: 8vh;
+  padding: auto;
+}
 
+.thumbnail1{
+  width: 30vw;
+}
+.row {
+  text-align: center;
+  margin: auto;
+  padding: auto;
+}
 .row2{
   margin: 0;
 
@@ -30,6 +43,13 @@ body {
   margin: 0;
 }
 
+#rowPost{
+
+}
+.thumbDiv{
+  margin-left: 13vw;
+  padding: auto;
+}
 .container-fluid{
   margin: 0;
 }
@@ -44,20 +64,26 @@ body {
   color: white;
 
 }
-.col-xs-offset-2{
+/*.col-xs-offset-2{
   text-align:center;
   top:40vh;
-}
+}*/
+
+/*#col9{
+  margin: auto;
+  margin-top: 8vh;
+}*/
 .img-responsive{
-  height: 30vh;
-  width: 30vw;
+  height: 40vh;
+  width: 50vw;
+  margin: auto;
 }
-.col-md-4 {
+/*.col-md-4 {
   background: #aaaaaa;
 }
 .col-md-5{
   background: #aaaaaa;
-}
+}*/
 .col-md-6{
   text-align:center;
   top:40vh;
@@ -67,17 +93,13 @@ body {
 .btn-primary{
   background: #aaaaaa;
 }
-img{
-  background-position: center;
-  width: 20vw;
-  height: 30vh;
-}
+
 .cityName{
   text-align: center;
 }
 .bg-lightgray{
 
-  position: fixed;
+  position: relative;
   height: 8vh;
     right: 0;
     bottom: 0;
@@ -86,9 +108,7 @@ img{
     background-color: #efefef;
     text-align: center;
 }
-.thumbnail{
-  width:75vw;
-}
+
 .cityPop{
   text-align: center;
 }
